{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 190,
  "lineage": "083d5884-b0af-b979-e6b9-03b70449746a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-049442a6cf8319180",
            "arn": "arn:aws:ec2:eu-west-1:946486897686:instance/i-0bd31917b9071331b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd31917b9071331b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "nti-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a8bce30abfa71d9",
            "private_dns": "ip-10-0-1-76.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.76",
            "public_dns": "ec2-54-229-248-66.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.229.248.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-050b2b300e36fc1f3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3907d74de0b41bb",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00a1687b9282c8011"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_2404"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:946486897686:internet-gateway/igw-0885cd7581eb691ed",
            "id": "igw-0885cd7581eb691ed",
            "owner_id": "946486897686",
            "tags": {
              "Name": "nti-igw"
            },
            "tags_all": {
              "Name": "nti-igw"
            },
            "vpc_id": "vpc-01fa3317d49d8bc56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nti_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "nti-alb-access-logs-22424271",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:946486897686:loadbalancer/app/nti-alb/be7fec4e82ed6175",
            "arn_suffix": "app/nti-alb/be7fec4e82ed6175",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nti-alb-512217040.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:946486897686:loadbalancer/app/nti-alb/be7fec4e82ed6175",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nti-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04de08beeafb34bfc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b3907d74de0b41bb"
              },
              {
                "subnet_id": "subnet-0ca89e8e1ecc7b3ee"
              }
            ],
            "subnets": [
              "subnet-0b3907d74de0b41bb",
              "subnet-0ca89e8e1ecc7b3ee"
            ],
            "tags": {
              "Name": "nti-alb"
            },
            "tags_all": {
              "Name": "nti-alb"
            },
            "vpc_id": "vpc-01fa3317d49d8bc56",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_bucket.elb_logs",
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main",
            "random_id.bucket_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nti_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:946486897686:listener/app/nti-alb/be7fec4e82ed6175/25fcb6631a834030",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:946486897686:targetgroup/nti-target-group/27d5f8eb64de4545",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:946486897686:listener/app/nti-alb/be7fec4e82ed6175/25fcb6631a834030",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:946486897686:loadbalancer/app/nti-alb/be7fec4e82ed6175",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.nti_alb",
            "aws_lb_target_group.nti_tg",
            "aws_s3_bucket.elb_logs",
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main",
            "random_id.bucket_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nti_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:946486897686:targetgroup/nti-target-group/27d5f8eb64de4545",
            "arn_suffix": "targetgroup/nti-target-group/27d5f8eb64de4545",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:946486897686:targetgroup/nti-target-group/27d5f8eb64de4545",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:946486897686:loadbalancer/app/nti-alb/be7fec4e82ed6175"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nti-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nti-target-group"
            },
            "tags_all": {
              "Name": "nti-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01fa3317d49d8bc56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:946486897686:route-table/rtb-023d16bc36a73cbbd",
            "id": "rtb-023d16bc36a73cbbd",
            "owner_id": "946486897686",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0885cd7581eb691ed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nti-public-rt"
            },
            "tags_all": {
              "Name": "nti-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fa3317d49d8bc56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071d39a55206e5c74",
            "route_table_id": "rtb-023d16bc36a73cbbd",
            "subnet_id": "subnet-0b3907d74de0b41bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3dcee1a0ec31de1",
            "route_table_id": "rtb-023d16bc36a73cbbd",
            "subnet_id": "subnet-0ca89e8e1ecc7b3ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:946486897686:security-group/sg-04de08beeafb34bfc",
            "description": "Allow HTTP to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04de08beeafb34bfc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nti-alb-sg",
            "name_prefix": "",
            "owner_id": "946486897686",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nti-alb-sg"
            },
            "tags_all": {
              "Name": "nti-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fa3317d49d8bc56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:946486897686:security-group/sg-0c12920eef7ce9311",
            "description": "Allow traffic from ALB to instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c12920eef7ce9311",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere (change to your IP!)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach app",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04de08beeafb34bfc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nti-app-sg",
            "name_prefix": "",
            "owner_id": "946486897686",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nti-app-sg"
            },
            "tags_all": {
              "Name": "nti-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fa3317d49d8bc56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:946486897686:subnet/subnet-0b3907d74de0b41bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3907d74de0b41bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "946486897686",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nti-public1"
            },
            "tags_all": {
              "Name": "nti-public1"
            },
            "vpc_id": "vpc-01fa3317d49d8bc56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:946486897686:subnet/subnet-0ca89e8e1ecc7b3ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca89e8e1ecc7b3ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "946486897686",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nti-public2"
            },
            "tags_all": {
              "Name": "nti-public2"
            },
            "vpc_id": "vpc-01fa3317d49d8bc56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:946486897686:vpc/vpc-01fa3317d49d8bc56",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09e42d77085db02eb",
            "default_route_table_id": "rtb-09b87f114765acbff",
            "default_security_group_id": "sg-00a1687b9282c8011",
            "dhcp_options_id": "dopt-00db2f5a276ff4069",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01fa3317d49d8bc56",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b87f114765acbff",
            "owner_id": "946486897686",
            "tags": {
              "Name": "nti-vpc"
            },
            "tags_all": {
              "Name": "nti-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}